eventDetails route completed

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
     <!-- spinner style end-->
     <title>Kiddies Educare</title>
   </head>
-  <body>
+  <body class="overflow-x:hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
